syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message Address {
  Entity Entity = 1;
  string street = 2;
  double latitude = 3;
  double longitude = 4;
  string zip_code = 5;
  string complement = 6;
  string neighborhood = 7;
}

message AddressListRequest {
  Address payload = 1;
  Metadata metadata = 2;
}

message AddressResponse {
  Address response = 1;
}

message AddressListResponse {
  repeated Address response = 1;
}

service AddressService {
  rpc Create(Address) returns (AddressResponse);
  rpc Update(Address) returns (AddressResponse);
  rpc FindAll(AddressListRequest) returns (AddressListResponse);
  rpc Count(Address) returns (CountResponse);
}